--- a/projeto-integrador/.devcontainer/Dockerfile.txt
+++ b/projeto-integrador/.devcontainer/Dockerfile.txt
@@ -11,7 +11,7 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 RUN echo "CREATE USER 'felipe'@'localhost' IDENTIFIED BY 'F3lipe'; \
-        GRANT ALL PRIVILEGES ON *.* TO 'sergio'@'localhost' WITH GRANT OPTION; \
+        GRANT ALL PRIVILEGES ON *.* TO 'felipe'@'localhost' WITH GRANT OPTION; \
         CREATE DATABASE projeto; \
         FLUSH PRIVILEGES;" > /tmp/script.sql
 
